Users refcount not incremented when creating a proxy but decremented when deleting it #81573

Closed
opened 2020-10-09 12:07:51 +02:00 by Enzio Probst · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.83.7, branch: master, commit date: 2020-09-30 06:12, hash: 192e591af9
Worked: version: 2.79b, hash f4dc9f9d68b

Short description of error
When making a Proxy of e.g. a linked Armature, the users refcount of the linked datablock is not incremented.
But when deleting it, the refcount is decremented, eventually reaching zero if recreating the proxy a few times.
In blender 2.79b this problem does not appear, as users refcount in neither incremented nor decremented for proxy creation or deletion.

Exact steps for others to reproduce the error

  1. Save the two attached blends in the same folder.
  2. Open use_cube.blend
  3. In the Data API outliner look for the users number of the object 'Cube_armature' and watch it for the next steps
  4. Delete the proxy armature
  5. recreate the proxy for 'Cube_armature'
  6. repeat steps 4-5 until user count will reach zero and below error will be printed in terminal
Info: Deleted 1 object(s)```

**Library**
[rigged_cube.blend](https://archive.blender.org/developer/F8970811/rigged_cube.blend)

**Use of the Library**
[use_cube.blend](https://archive.blender.org/developer/F8970812/use_cube.blend)

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.83.7, branch: master, commit date: 2020-09-30 06:12, hash: `192e591af9` Worked: version: 2.79b, hash `f4dc9f9d68b` **Short description of error** When making a Proxy of e.g. a linked Armature, the users refcount of the linked datablock is not incremented. But when deleting it, the refcount is decremented, eventually reaching zero if recreating the proxy a few times. In blender 2.79b this problem does not appear, as users refcount in neither incremented nor decremented for proxy creation or deletion. **Exact steps for others to reproduce the error** 1. Save the two attached blends in the same folder. 2. Open use_cube.blend 3. In the Data API outliner look for the users number of the object 'Cube_armature' and watch it for the next steps 4. Delete the proxy armature 5. recreate the proxy for 'Cube_armature' 6. repeat steps 4-5 until user count will reach zero and below error will be printed in terminal ```ERROR (bke.lib_id): C:\b\buildbot-worker-windows\windows_lts_283\blender.git\source\blender\blenkernel\intern\lib_id.c:342 id_us_min: ID user decrement error: OBCube_armature (from 'C:\Users\Enzio\Desktop\bugreport_proxy_user\rigged_cube.blend'): 0 <= 0 Info: Deleted 1 object(s)``` **Library** [rigged_cube.blend](https://archive.blender.org/developer/F8970811/rigged_cube.blend) **Use of the Library** [use_cube.blend](https://archive.blender.org/developer/F8970812/use_cube.blend)
Author

Added subscriber: @EnzioProbst

Added subscriber: @EnzioProbst
Author

When saving the Blendfile where the Armature has reached zero users, but having a Proxy of it created, it will recalculate the users count when opening the file, but the Proxy relation will be broken and the linked rig will not follow the proxy.
object.proxy is None but object.proxy_collection is still pointing to the collection.
Only recreating the Proxy in the newly opened blendfile fixes the relation again.

When saving the Blendfile where the Armature has reached zero users, but having a Proxy of it created, it will recalculate the users count when opening the file, but the Proxy relation will be broken and the linked rig will not follow the proxy. object.proxy is None but object.proxy_collection is still pointing to the collection. Only recreating the Proxy in the newly opened blendfile fixes the relation again.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, looks like a bug to me.

Can confirm, looks like a bug to me.

This issue was referenced by 62f5232f37

This issue was referenced by 62f5232f37b9755bfa07a174a47017cd1609fb5a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-10-09 17:53:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81573
No description provided.