Fix T81573: Users refcount not incremented when creating a proxy.

Proxies are refcounting usages of objects, historical code was
apparently missing that.